<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/back"
    android:orientation="vertical"

     >

	<Button
		android:id="@+id/playhelp"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:layout_alignParentStart="true"
		android:layout_marginStart="300dp"
		android:background="@drawable/in"
		android:onClick="help"
		android:textColor="#ffff"
		android:textStyle="bold" />

	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:paddingTop="100dp"

		>

		<TextView
			android:id="@+id/textView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginTop="0dp"
			android:layout_toEndOf="@+id/body"
			android:text="Category: Computer Science"
			android:textColor="#FFFF"
			android:textSize="17dp" />

		<TextView
			android:id="@+id/textView1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_alignBottom="@+id/head"
			android:layout_alignStart="@+id/textView"
			android:text="                   Language: English"
			android:textColor="#FFFF"
			android:textSize="17dp" />

		<ImageView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/gallows"
			android:paddingLeft="0dp"
			android:paddingTop="0dp"
			android:src="@drawable/android_hangman_gallows" />

		<ImageView
			android:id="@+id/head"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/head"
			android:paddingLeft="100dp"
			android:paddingTop="20dp"
			android:src="@drawable/android_hangman_head" />

		<ImageView
			android:id="@+id/body"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/body"
			android:paddingLeft="112dp"
			android:paddingTop="57dp"
			android:src="@drawable/android_hangman_body" />


		<ImageView
			android:id="@+id/arm1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/arm"
			android:paddingLeft="90dp"
			android:paddingTop="55dp"
			android:src="@drawable/android_hangman_arm1" />

		<ImageView
			android:id="@+id/arm2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/arm"
			android:paddingLeft="118dp"
			android:paddingTop="53dp"
			android:src="@drawable/android_hangman_arm2" />

		<ImageView
			android:id="@+id/leg1"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/leg"
			android:paddingLeft="95dp"
			android:paddingTop="97dp"
			android:src="@drawable/android_hangman_leg1" />

		<ImageView
			android:id="@+id/leg2"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="@string/leg"
			android:paddingLeft="117dp"
			android:paddingTop="97dp"
			android:src="@drawable/android_hangman_leg2" />


	</RelativeLayout>

	<LinearLayout
		android:id="@+id/word"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginBottom="5dp"
		android:gravity="center"
		android:orientation="horizontal"
		android:padding="10dp"
		>


	</LinearLayout>

	<GridView
		android:id="@+id/letters"
		android:layout_width="fill_parent"
		android:layout_height="230dp"
		android:layout_gravity="center"
		android:layout_marginBottom="5dp"
		android:horizontalSpacing="5dp"
		android:numColumns="6"
		android:padding="5dp"
		android:stretchMode="columnWidth"
		android:verticalSpacing="5dp"
		/>


	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="62dp"
		android:gravity="center">




	</RelativeLayout>



</LinearLayout>
